[gd_scene load_steps=5 format=3 uid="uid://7abs38movxwt"]

[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="1_frepn"]
[ext_resource type="Script" uid="uid://dixj67vr67cst" path="res://scenes/ui/work_station.gd" id="2_kl40w"]
[ext_resource type="Texture2D" uid="uid://cdq3wb6w70335" path="res://assets/game/Objects/cog_item.png" id="2_qtk5s"]
[ext_resource type="FontFile" uid="uid://di7gplllef8xy" path="res://assets/ui/fonts/pixelFont-7-8x14-sproutLands.ttf" id="3_kl40w"]

[node name="WorkStation" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.5
offset_top = -210.0
offset_right = 217.5
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_frepn")
theme_type_variation = &"InventoryItemPanel"
script = ExtResource("2_kl40w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CloseWorkStation" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("3_kl40w")
theme_override_font_sizes/font_size = 36
text = "X"

[node name="PanelContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WorkStationTitle" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Work Station"
horizontal_alignment = 1

[node name="HBoxBodyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipesPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxBodyContainer"]
custom_minimum_size = Vector2(0, 225)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"InventoryItemPanel"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/RecipesPanel"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/RecipesPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/RecipesPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("3_kl40w")
theme_override_font_sizes/font_size = 27
text = "<item_name>"
icon = ExtResource("2_qtk5s")

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/RecipesPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("3_kl40w")
theme_override_font_sizes/font_size = 27
text = "<item_name>"
icon = ExtResource("2_qtk5s")

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/RecipesPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("3_kl40w")
theme_override_font_sizes/font_size = 27
text = "<item_name>"
icon = ExtResource("2_qtk5s")

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/RecipesPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"ToolButton"
theme_override_fonts/font = ExtResource("3_kl40w")
theme_override_font_sizes/font_size = 27
text = "<item_name>"
icon = ExtResource("2_qtk5s")

[node name="ResultRecipesPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxBodyContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"InventoryItemPanel"

[node name="ResultItemRecipe" type="Label" parent="MarginContainer/VBoxContainer/HBoxBodyContainer/ResultRecipesPanel"]
layout_mode = 2
text = "result_item"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseWorkStation" to="." method="_on_close_work_station_pressed"]
